--- a/Tarea/Tarea Semana 12.ipynb
+++ b/Tarea/Tarea Semana 12.ipynb
@@ -21,7 +21,7 @@
     "azdata_cell_guid": "3ba88f58-c4f2-47f5-9267-9b92d62138f2"
    },
    "source": [
-    "# Estudiante: "
+    "# Estudiante: Anthony Navarro Aguilar"
    ]
   },
   {
