--- a/Notebook/01 - Configuración previa.ipynb
+++ b/Notebook/01 - Configuración previa.ipynb
@@ -22,10 +22,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d5711cfd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib in c:\\users\\antho\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.9.2)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\antho\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (1.3.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\antho\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\antho\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (4.54.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\antho\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (1.4.7)\n",
+      "Requirement already satisfied: numpy>=1.23 in c:\\users\\antho\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (2.1.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\antho\\appdata\\roaming\\python\\python312\\site-packages (from matplotlib) (24.1)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\antho\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (11.0.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\antho\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (3.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\antho\\appdata\\roaming\\python\\python312\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\antho\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
     "pip install matplotlib"
    ]
@@ -47,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
